--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,17 +4,18 @@ CUPTI_PATH=/usr/local/cuda/extras/CUPTI
 INCLUDES = -I ../include -I /usr/local/cuda/extras/CUPTI/include 
 
 
-CXXARGS = -std=c++14 -g
+CXXARGS = -std=c++11 -g
 CXXARGS += -Xcompiler -DNDEBUG
+CXXARGS += -Xptxas="-dlcm=cg"  # --def-load-cache  "cg" -> Cache at global level (cache in L2 and below, not L1).
+CXXARGS += -Xptxas="-dscm=cg"  # --def-store-cache  "cg" -> Cache at global level (cache in L2 and below, not L1).
+
 LIBS = -lcuda -L$(CUPTI_PATH)/lib64 -lcupti
 
 
 
 main: main.cu	
-	# nvcc $(CXXARGS) $(INCLUDES) $(LIBS) main.cu -o main
-	nvcc -std=c++17 -o main-l1 main.cu -O3 -Xptxas="-dlcm=ca"
-	
-    nvcc -std=c++17 -o main-l2 main.cu -O3 -Xptxas="-dlcm=cg"
+	nvcc $(CXXARGS) $(INCLUDES) $(LIBS) main.cu -o main
+
 
 
 clean: 
